--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ aiofiles==23.2.1
 aiohttp==3.9.3
 aiosignal==1.3.1
 attrs==23.2.0
-backtrader==1.9.78.123
 cachetools==5.3.2
 contourpy==1.2.0
 cycler==0.12.1
@@ -28,3 +27,4 @@ tinkoff==0.1.1
 tinkoff-investments==0.2.0b66
 tzdata==2024.1
 yarl==1.9.4
+backtrader @ git+https://github.com/555Russich/backtrader@my_dev
